bug squash :)

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 a:hover {
     cursor: pointer;
 }
@@ -69,11 +72,18 @@ a:hover {
 /* =====================
         MAIN CONTAINER
 ========================*/
-.card {
+.col-md-4 {
+    max-height: 550px;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 .card-img-top {
-    max-height: 400px;
+    height: 400px;
+}
+.card-body {
+    background-color: #c0c0c0;
+    color: #000000;
+    font-size: 12px;
 }
 /* =====================
         FOOTER
@@ -84,6 +94,11 @@ a:hover {
     color: white;
     margin-bottom: 30px;
     padding: 10px;
+}
+.nav-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end !important;
 }
 .nav-footer ul {
     list-style-type: none;
@@ -128,9 +143,13 @@ a:hover {
         left: 10px;
         position: fixed;
     }
-    .card-img-top {
-        max-height: 400px;
+    .card {
+        min-height: 430px;
     }
+    .card-img-top {
+        height: 400px;
+    }
+    .card-body { font-size: 16px;}
     .nav-footer {
         display: flex;
         flex-direction: row;
